# photo-storage-microservice

./: .env.TEMPLATE  README.md  main.py  pyproject.toml
.github/workflows/: build-and-push-container.yml
core/: authentication.py  configuration.py  processing.py  storage.py
core/database/: __init__.py  models.py
