[tool.poetry]
name = "micro-scale-storage"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
psycopg2 = "^2.9.10"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.7.0"
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"
pyzmq = "^26.2.0"
azure-storage-blob = "^12.24.0"
azure-identity = "^1.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
